--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,15 +5,29 @@
   text-align: center;
 }
 
+a {
+  border: 1px solid #555;
+  margin-right: 10px;
+  padding: .4rem .8rem;
+  border-radius: 4px;
+}
+
+.active {
+  background: blue;
+  color: #fff;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
@@ -22,6 +36,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
